--- a/module/stores/StoreInformation/index.scss
+++ b/module/stores/StoreInformation/index.scss
@@ -17,6 +17,12 @@
     height: 100%;
   }
 
+  .products-section {
+    gap: 16px;
+    width: 100%;
+    height: 100%;
+  }
+
   .ant-input,
   .ant-input-password {
     width: 100%;
